tokio-fsm-macros/tests/ui/multiple_on_timeout.stderr
error: Multiple #[on_timeout] handlers are not allowed
  --> tests/ui/multiple_on_timeout.rs:19:14
   |
19 |     async fn timeout2(&mut self) -> Transition<Idle> {
   |              ^^^^^^^^

warning: unused import: `Transition`
 --> tests/ui/multiple_on_timeout.rs:1:17
  |
1 | use tokio_fsm::{Transition, fsm};
  |                 ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
